# desiderata

./: Cargo.toml  README.md
docs/: inquiry.md  proposition_lang.md
src/: agent.rs  lib.rs  main.rs  society.rs
src/agent/: agent.rs
src/society/: society.rs
